test/libsolidity/syntaxTests/storageLayoutSpecifier/literal_cast.sol
contract at layout at uint(42) { }
// ----
// TypeError 1505: (22-30): The base slot expression cannot be evaluated during compilation.
